# book1

./: .gitignore  CLAUDE.md  QWEN.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
backend/: .env.example  .gitignore  API.md  README.md  agent.py  api.py  main.py  pyproject.toml  requirements.txt  retrieve.py  test_agent.py  test_fixed_agent.py  test_query.py
docasaurus/: .markdownlint.json  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  sidebars.ts.bak
docasaurus/.github/workflows/: deploy.yml
docasaurus/docs/: chapter-1.md  chapter-2.md  chapter-3.md  intro.md
docasaurus/docs/chapter-1/: _category_.json  index.md  lesson-1.md  lesson-2.md  lesson-3.md  lesson-4.md
docasaurus/docs/chapter-2/: _category_.json  index.md  lesson-1.md  lesson-2.md  lesson-3.md  lesson-4.md
docasaurus/docs/chapter-3/: _category_.json  index.md  (+4 more)
docasaurus/scripts/: validate-content.js
specs/001-frontend-backend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-retrieval-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-website-deployment-rag/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-retrieval-validation/: spec.md  tasks.md
specs/004-rag-agent/: data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-ui-theme-dark-gold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-book-specification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+65 files in other folders)
