[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG pipeline for Docusaurus book content"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "cohere>=4.0.0",
    "qdrant-client>=1.8.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.0.0",
]